[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "1.82.0"
anyhow = "1.0"
duckdb = "0.8.1"
parquet = "45.0.0"
arrow = "45.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
once_cell = "1.18.0"

[build-dependencies]
flutter_rust_bridge_codegen = "1.82.0"